Bug 82352: Can't select multiline right-to-left text. r=mjudge, sr=bz.